# Audio

./: .gitignore  Audio.csproj  Audio.sln  LICENSE  README.md
.github/workflows/: build.yml
Audio/: Audio.csproj
Audio/src/: Audio.cs  AudioApi.cs  AudioChannel.cs  AudioConfig.cs  AudioConstants.cs  AudioMainloop.cs  AudioManager.cs  AudioSource.cs
Audio/src/Decoders/: FFMpegDecoder.cs  IPcmDecoder.cs  NativeDecoder.cs
Audio/src/Opus/: Engine2Opus.cs  OpusEncoder.cs  OpusEnum.cs  OpusException.cs  OpusSafeHandle.cs
AudioApi/: AudioApi.csproj  IAudioApi.cs  IAudioChannel.cs  IAudioChannelController.cs  IAudioSource.cs
Benchmarker/: Benchmarker.csproj  EncoderBenchmark.cs  Program.cs
PCMDecoder/: Cargo.toml
PCMDecoder/src/: decoder.rs  lib.rs
src/: Audio.cs  AudioApi.cs  AudioChannel.cs  AudioConfig.cs  AudioConstants.cs  AudioMainloop.cs  AudioManager.cs  AudioSource.cs
