[package]
name = "pcmdecoder"
version = "0.1.0"
edition = "2024"

[lib]
name = "pcmdecoder"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
symphonia = { version = "0.5.5", features = [ "all" ] }
once_cell = "1.19.0"
rubato = "0.14"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true